# kinetic_sol

./: .gitignore  AGENTS.md  README.md  dev.neikon.kinetic_sol.json  meson.build
.github/workflows/: flatpak.yml
data/: dev.neikon.kinetic_sol.desktop.in  dev.neikon.kinetic_sol.gschema.xml  dev.neikon.kinetic_sol.metainfo.xml.in  dev.neikon.kinetic_sol.service.in  meson.build
data/icons/: meson.build
docs/: agent_memory.md  app_spec.md  roadmap.md
po/: POTFILES.in  meson.build
scripts/: prepare_flatpak_pages.py
src/: kineticsol.gresource.xml  kineticsol.in  main.py  meson.build  networking.py  power.py  remote_control.py  settings.py  tray.py  window.py  window.ui
